--- a/todolist.html
+++ b/todolist.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Totdo List</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     
 </head>
 <body>
     <script src="main.js"></script>
+    <script src="style.js"></script>
 </body>
 </html>
